2011-07-13 aurel :
* initial version