@@ -108,6 +108,10 @@
                           <string>translated_validation_state_title</string>
                           <string>State</string>
                         </tuple>
+                        <tuple>
+                          <string>source_administration</string>
+                          <string>Payment Transaction Owner</string>
+                        </tuple>
                       </list>
                     </value>
                 </item>
